node-main/deps/v8/test/message/fail/strict-with.out
*%(basename)s:32: SyntaxError: Strict mode code may not include a with statement
  with ({}) {}
  ^^^^
SyntaxError: Strict mode code may not include a with statement
